--- a/MADD_Assesment_01/MADD_Assesment_01/Base.lproj/Main.storyboard
+++ b/MADD_Assesment_01/MADD_Assesment_01/Base.lproj/Main.storyboard
@@ -221,7 +221,7 @@ Here's how it works:
         <!--My Recipes-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MADD_Assesment_01" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecipeListViewController" customModule="MADD_Assesment_01" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
